[package]
name = "ruby"
version = "0.1.0"
edition = "2024"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"


[dependencies]
bytemuck = "1.23.0"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
smol = "2.0.2"
thiserror = "2.0.12"
tokio = "1.45.0"
wgpu = "25.0.0"
winit = { version = "0.30.10", features = ["rwh_06"] }
